examples/compile_pass/block_scope.xl
fun main() -> i32 {
    let value = 0;
    {
        let value = 45;
    }
    ret value;
}