examples/compile_fail/var_not_found.xl
fun hi() {
    let a = 2;
    return b;
}